fixed alignment on submit pag

--- a/src/scss/components/_submit-match.scss
+++ b/src/scss/components/_submit-match.scss
@@ -29,15 +29,14 @@
   height: 80px;
   h4{
     color: white;
-    position: relative;
+    font-size: 28px;
     background-color: #BF6969;
     text-align: center;
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
+    margin: 10px auto;
     border-radius: 50%;
-    padding-top: 10px;
-    left: 34%;
-    top: 10px;
+    padding-top: 15px;
   }
   h3{
     color: #666;
@@ -49,7 +48,7 @@
     margin-left: -8.3%;
     h3{
       padding: 0 40px;
-      text-align: left;
+      text-align: center;
     }
     height: 100%;
     background-color: #eee;
@@ -59,10 +58,11 @@
     margin-left: 8%;
     h3{
       padding: 0 40px;
-      text-align: right;
+      color: white;
+      text-align: center;
     }
     height: 100%;
-    background-color: #bbb;
+    background-color: #aaa;
   }
 }
 .gameRow{
